# cryo-ocd

./: .dockerignore  .env.example  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  NOTICE  README.md  ROADMAP.md  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md  license-checksums.sha256
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  implementation-task.yml
.github/workflows/: build_and_test.yml  data-validation.yml  guards.yml  python_release.yml  release.yml
book/: SUMMARY.md
book/cryo_python/: example_usage.md  installation.md  overview.md  reference.md
book/intro/: data_sources.md  installation.md
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  main.rs  remember.rs  run.rs
crates/cli/src/parse/: blocks.rs  execution.rs  file_output.rs  source.rs  timestamps.rs
crates/freeze/: build.rs
crates/freeze/src/: consolidate.rs  freeze.rs  lib.rs
crates/freeze/src/datasets/: blocks.rs  contracts.rs  erc20_transfers.rs  erc721_transfers.rs  geth_opcodes.rs  logs.rs  trace_calls.rs  traces.rs  transactions.rs
crates/freeze/src/multi_datasets/: blocks_and_transactions.rs  geth_state_diffs.rs
crates/freeze/src/types/: execution.rs  schemas.rs  sources.rs  summaries.rs
crates/freeze/src/types/dataframes/: creation.rs  export.rs  sort.rs  u256s.rs
crates/freeze/src/types/decoders/: log_decoder.rs
crates/python/: pyproject.toml
crates/python/python/cryo/: _collect.py  _freeze.py
crates/python/python/cryo_test/: pyproject.toml
crates/python/python/cryo_test/cryo_test/: polars_utils.py
crates/python/python/cryo_test/examples/ethers_vs_alloy/: build_cryo  compare_alloy_to_ethers
crates/python/python/cryo_test/tests/: test_polars_utils.py
crates/python/rust/: collect_adapter.rs  freeze_adapter.rs  lib.rs
crates/to_df/src/: lib.rs
docs/adr/: 0001-fork-charter.md  0002-dependency-modernization.md  0003-retire-clap-cryo.md  0004-validation-strategy.md  0005-secret-handling.md  0006-op-stack-support.md  0007-multiple-rpc-providers.md  README.md  template.md
