
[workspace]
members = ["crates/cli", "crates/freeze", "crates/to_df", "crates/python"]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021 but not virtual workspaces.
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/paradigmxyz/cryo"
repository = "https://github.com/paradigmxyz/cryo"
exclude = [".github/"]

[workspace.dependencies]
cryo_cli = { version = "0.5.0", path = "./crates/cli" }
cryo_freeze = { version = "0.5.0", path = "./crates/freeze" }
cryo_to_df = { version = "0.5.0", path = "./crates/to_df" }

alloy = { version = "2.0", features = [
    "full",
    "rpc-types-trace",
    "provider-ws",
    "provider-ipc",
    "provider-debug-api",
    "provider-trace-api",
    "transport-ipc-mock",
    # `rpc-client-ws` exposes the typed `ClientBuilder::ws` builder, used by
    # the JWT WebSocket path in crates/cli (P4-20).
    "rpc-client-ws",
] }
# JWT auth for RPC connections (P4-20). The `alloy` meta-crate does not
# re-export a `jwt-auth` feature, so the two underlying crates are pulled in
# directly:
#   - `alloy-transport-http`/`jwt-auth` gates the hyper `AuthLayer` used for
#     HTTP JWT. `jwt-auth` enables alloy's `hyper` feature, which in turn
#     pulls `hyper-tls` (native-tls/OpenSSL) -- so the JWT HTTP transport
#     links native-tls and the Dockerfile installs libssl accordingly.
#     `default-features = false` still keeps the main reqwest transport on
#     rustls (it drops the `reqwest-default-tls` default).
#   - `alloy-rpc-types-engine`/`jwt-aws-lc-rs` provides `JwtSecret` token
#     signing on the aws-lc-rs backend already built for rustls.
alloy-rpc-types-engine = { version = "2.0", features = ["jwt-aws-lc-rs"] }
alloy-transport-http = { version = "2.0", default-features = false, features = [
    "jwt-auth",
] }
anstyle = "1.0.4"
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.5", features = [
    "derive",
    "color",
    # `env` backs the `--jwt-secret` CRYO_JWT_SECRET fallback (P4-20).
    "env",
] }
colored = "2.0.4"
color-print = "0.3.5"
eyre = "0.6.8"
futures = "0.3.29"
governor = "0.6.0"
hex = "0.4.3"
heck = "0.4.1"
indexmap = "2.1.0"
indicatif = "0.17.7"
lazy_static = "1.4.0"
mesc = "0.1.4"
polars = { version = "0.53", features = [
    "parquet",
    "string_encoding",
    "polars-lazy",
    "lazy",
    "binary_encoding",
    "json",
    "dtype-struct",
] }
prefix-hex = "0.7.1"
# `extension-module` is NOT enabled here: it tells pyo3 to skip linking
# libpython, which breaks `cargo build` of the `cryo` binary (polars 0.53's
# polars-error pulls pyo3 into the shared dep graph). The wheel build enables
# it via `features = ["pyo3/extension-module"]` in crates/python/pyproject.toml.
pyo3 = { version = "0.27" }
pyo3-build-config = "0.27"
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
pyo3-polars = "0.26"
rand = "0.8.5"
regex = "1.10.2"
serde = { version = "1.0.191", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
thousands = "0.2.0"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "sync"] }

[profile.dev]
incremental = true
debug = 1
codegen-units = 32
