[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "cryo"
description = "cryo is the easiest way to extract blockchain data to parquet, csv, json, or a python dataframe."
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
readme = "README.md"
# cryo returns its results as polars DataFrames across the pyo3-polars FFI
# boundary; pyo3-polars imports `polars` at runtime to reconstruct them, so it
# is a hard runtime dependency even though the Python sources never import it.
dependencies = ["polars"]

[project.optional-dependencies]
# output_format="pandas" converts the result via polars' DataFrame.to_pandas(),
# which requires pandas and pyarrow.
pandas = ["pandas", "pyarrow"]


[tool.maturin]
python-source = "python"
module-name = "cryo._cryo_rust"
features = ["pyo3/extension-module"]


[tool.mypy]
strict = true
files = ["python/cryo"]
enable_incomplete_feature = "Unpack"

